--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <h2 id="ministryTitleHi" style="display:none;">संपत्ति पंजीकरण मंत्रालय</h2>
             </div>
             <div class="gov-right-group">
-  <img src="imgs.search.brave.com/UlZsp2z0l84pPLKbMb0LrEM3wOHE1iQBLCpx4aSzvFM/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly91cGxv/YWQud2lraW1lZGlh/Lm9yZy93aWtpcGVk/aWEvY29tbW9ucy90/aHVtYi81LzU1L0Vt/YmxlbV9vZl9JbmRp/YS5zdmcvNTEycHgt/RW1ibGVtX29mX0lu/ZGlhLnN2Zy5wbmc"
+  <img src="https://i.postimg.cc/NF2JH4x8/pngegg.png"
        alt="Emblem of India" class="gov-emblem">
 
   <img src="Azadi_Ka_Amrit_Mahotsav_Logo_PNG_VECTOR_-_Vector_Design_-_Cdr__Ai__EPS__PNG__SVG-removebg-preview.png"
@@ -641,4 +641,5 @@ document.addEventListener('DOMContentLoaded', function () {
 </body>
 
 </html>
+
 
